--- a/lab 5 projektarbete/DemoLab_DVbyPandas (2).ipynb
+++ b/lab 5 projektarbete/DemoLab_DVbyPandas (2).ipynb
@@ -989,9 +989,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\valli\\Documents\\GitHub\\SkriptProg\\lab 5 projektarbete\\DemoLab_DVbyPandas (2).ipynb Cell 13'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/valli/Documents/GitHub/SkriptProg/lab%205%20projektarbete/DemoLab_DVbyPandas%20%282%29.ipynb#ch0000012?line=0'>1</a>\u001b[0m \u001b[39m# If we want to extract multiple columns from the data, simply add the column names to the list.\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/valli/Documents/GitHub/SkriptProg/lab%205%20projektarbete/DemoLab_DVbyPandas%20%282%29.ipynb#ch0000012?line=1'>2</a>\u001b[0m some_cols \u001b[39m=\u001b[39m data[[\u001b[39m'\u001b[39m\u001b[39mTitle\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mGenre\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mActors\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mDirector\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mRating\u001b[39m\u001b[39m'\u001b[39m]]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# If we want to extract multiple columns from the data, simply add the column names to the list.\n",
     "some_cols = data[['Title','Genre','Actors','Director','Rating']]"
@@ -1491,79 +1503,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Rating</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Director</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Aamir Khan</th>\n",
-       "      <td>8.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Abdellatif Kechiche</th>\n",
-       "      <td>7.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Adam Leon</th>\n",
-       "      <td>6.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Adam McKay</th>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Adam Shankman</th>\n",
-       "      <td>6.3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     Rating\n",
-       "Director                   \n",
-       "Aamir Khan              8.5\n",
-       "Abdellatif Kechiche     7.8\n",
-       "Adam Leon               6.5\n",
-       "Adam McKay              7.0\n",
-       "Adam Shankman           6.3"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\valli\\Documents\\GitHub\\SkriptProg\\lab 5 projektarbete\\DemoLab_DVbyPandas (2).ipynb Cell 24'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/valli/Documents/GitHub/SkriptProg/lab%205%20projektarbete/DemoLab_DVbyPandas%20%282%29.ipynb#ch0000023?line=0'>1</a>\u001b[0m data\u001b[39m.\u001b[39mgroupby(\u001b[39m'\u001b[39m\u001b[39mDirector\u001b[39m\u001b[39m'\u001b[39m)[[\u001b[39m'\u001b[39m\u001b[39mRating\u001b[39m\u001b[39m'\u001b[39m]]\u001b[39m.\u001b[39mmean()\u001b[39m.\u001b[39msort_values()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
     }
    ],
    "source": [
-    "data.groupby('Director')[['Rating']].mean().head()"
+    "data.groupby('Director')[['Rating']].mean().sort_values()"
    ]
   },
   {
